Changelog for GEMC
==================

1/26/17
 - getting particleIterator with GetParticleIterator() (geant4 10.3)
 - removed unnecessary passing of run manager

1/19/17
 - FASTMCMODE option:

    - 0: No FASTMC (default).
    - 1: Disable secondaries (5m production cut) and set high (5m) max step in sensitive detectors
    - 2: Disable all physics but transportation.

12/13/16
 - Daniel Lersch, Michael Kunkel: added DC time to distance function

12/6/16
 - addded mirror sigmaAlpha in verbosity log

12/5/16
 - fixed clas12 ctof time offset
 - added Birk Constant properties in material factory
 - added reading mirrors Sigma Alpha. Fixed backward compatibility for materials.
 - adding property sigmaAlpha in optical surfaces

11/29/16
 - tdc was not cast correcly to int in DC hit process

11/23/16
 - all ftof panels assigned to the same hit process and bank

11/22/16
 - added magnetic field information in MHit. This will give access to it to all sensitive detector hit process routines.
 - loading field info in MHit
 - changed DC hit process to have layer from 1-36 and to have TDC = time in ns

11/18/16
 - added option SKIPNGEN to skip N generated events

11/15/16
 - added CLAS12 CND, FMT, BST, HTCC, LTCC, RICH, FTCAL, FTHODO constants and database reading

11/7/16
 - new bonus hit process

10/25/16
 - evio format for RF signal conforming to CLAS12 structure.

10/18/16
 - matching bst hit process pars to java geometry

10/10/16
 - added anti_neutronInelastic to process catalogue.

.. Note::
	10/7/16 gemc 2.5 released.

|

10/7/16
 - added button to display magnetic field lines as arrows
 - added button to display an automatic scale on screen

10/5/16
 - added tdc variable for clas12 dc
 - cad.gxml path is now looked in the cad files directories as well

9/28/16
 - addressing precision issue in bst hit process routine
 - ec process ID is now empty - every strip is now a volume

9/27/16
 - fixed cosmic routine, was not generating cosmics vertices correctly.

9/15/16